--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>حوار حول إثبات P = NP</title>
+    <style>
+        body { font-family: Arial, sans-serif; direction: rtl; text-align: right; padding: 20px; }
+        h1, h2 { color: #4CAF50; }
+        .conversation { white-space: pre-wrap; background-color: #f9f9f9; border: 1px solid #ddd; padding: 15px; border-radius: 8px; }
+    </style>
+</head>
 <body>
     <h1>حوار حول إثبات P = NP</h1>
     <p><strong>جميع الحقوق محفوظة للمهندسة رئيسه علي</strong></p>
@@ -1401,3 +1413,4 @@ ChatGPT said:
         </p>
     </div>
 </body>
+</html>
